--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,11 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+
+        <meta-data
+                android:name="com.google.android.geo.API_KEY"
+                android:value="AIzaSyDZ7oJyb0AiH07dWZerCxdNkkazcU_EUlk"/>
+
         <activity android:name=".SearchFlightsActivity">
         </activity>
         <activity android:name=".SearchDestinationActivity">
